--- a/app/src/pages/Login.css
+++ b/app/src/pages/Login.css
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   background: var(--color-bg);
 }
 
@@ -137,7 +137,7 @@
 /* --- Responsive --- */
 @media (max-width: 600px) {
   .login-form {
-    /* padding: 1.2rem 0.5rem; */
+    padding: 1.2rem 0.5rem;
     max-width: 98vw;
     border-radius: var(--radius);
     box-sizing: border-box;
@@ -160,4 +160,33 @@
     border-radius: 6px;
     margin-right: 10px;
   }
+  .login-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+.login-logo {
+  width: 64px;              /* adjust as needed */
+  height: 64px;
+  object-fit: contain;
+  margin-bottom: 0.8rem;
+}
+
+.login-title {
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: var(--color-text);
+  margin: 0;
+}
+.login-btn{
+  width: 100%;
+  padding: 0.8rem;
+  font-size: 1rem;
+  border-radius: 6px;
+  box-shadow: none;
+  justify-content: center;
+}
+
 }
