--- a/app/src/pages/UserDashboard.css
+++ b/app/src/pages/UserDashboard.css
@@ -68,7 +68,7 @@ body {
   display: flex;
   justify-content: space-between;
   margin-top: 12px;
-  font-size: xx-large;
+  font-size: x-large;
 }
 
 .reach-stats div {
